@@ -6,6 +6,7 @@ License:	GPLv3+
 Group:		Development/Libraries
 URL:		http://sourceforge.net/projects/gawkextlib
 Source0:	%{url}/files/%{name}-%{version}.tar.gz
+BuildRequires:	make
 BuildRequires:	/usr/include/gawkapi.h, /usr/include/gawkextlib.h, gd-devel
 Requires:	gawk
 Requires:	gd
