@@ -11,10 +11,11 @@ Requires:         gawk
 BuildRequires:    gawk-devel >= 4.2.1
 BuildRequires:    gcc-c++
 BuildRequires:    rapidjson-devel
+BuildRequires:    make
 
 # Make sure the API version is compatible with our source code:
 BuildRequires:    gawk(abi) >= 2.0
-BuildRequires:    gawk(abi) < 4.0
+BuildRequires:    gawk(abi) < 5.0
 
 # At runtime, the ABI must be compatible with the compile-time version
 %global gawk_api_version %(gawk 'BEGINFILE {if (ERRNO) nextfile} match($0, /#define gawk_api_(major|minor)_version[[:space:]]+([[:digit:]]+)/, f) {v[f[1]] = f[2]} END {print (v["major"] "." v["minor"])}' /usr/include/gawkapi.h)
