@@ -1,3 +1,12 @@
+2024-01-14         Andrew J. Schorr     <ajschorr@fedoraproject.org>
+
+	* make_extension_directory.sh: Update BuildRequires: gawk(abi)
+	to say < 5.0 instead of < 4.0 to accomodate the latest bump
+	to the gawkapi.h gawk_api_major_version to support the new do_csv
+	flag.
+	*/packaging/gawk*.spec.in: Ditto, and add "BuildRequires: make",
+	since Fedora needs that these days.
+
 2021-06-28         Andrew J. Schorr     <ajschorr@fedoraproject.org>
 
 	* make_extension_directory.sh: Update BuildRequires: gawk(abi)
